--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-vite-react-sdk",
+  "name": "octaflip",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cartridge/connector": "^0.7.3",
+    "@cartridge/controller": "^0.7.3",
+    "@cartridge/ui-next": "0.5.0-alpha.1",
     "@dojoengine/core": "1.1.1",
     "@dojoengine/create-burner": "1.1.1",
     "@dojoengine/predeployed-connector": "1.1.1",
@@ -17,32 +20,34 @@
     "@dojoengine/torii-client": "1.1.1",
     "@dojoengine/torii-wasm": "1.1.1",
     "@dojoengine/utils": "1.1.1",
-    "@starknet-react/chains": "^3.1.0",
-    "@starknet-react/core": "^3.6.2",
+    "@starknet-react/chains": "^3.1.2",
+    "@starknet-react/core": "^3.7.2",
+    "@tailwindcss/postcss": "^4.0.7",
     "@types/uuid": "^10.0.0",
     "immer": "^10.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "starknet": "6.21.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "starknet": "^6.23.1",
     "uuid": "^10.0.0",
     "vite-plugin-top-level-await": "^1.4.4",
     "vite-plugin-wasm": "^3.3.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@eslint/js": "^9.19.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.7"
+    "tailwindcss": "^4.0.6",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.22.0",
+    "vite": "^6.1.0",
+    "vite-plugin-mkcert": "^1.17.6"
   }
 }
