--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,8 @@
     "immer": "^10.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.2.0",
+    "react-toastify": "^11.0.3",
     "starknet": "^6.23.1",
     "uuid": "^10.0.0",
     "vite-plugin-top-level-await": "^1.4.4",
