--- a/contract/Scarb.toml
+++ b/contract/Scarb.toml
@@ -21,3 +21,6 @@ build-external-contracts = ["dojo::world::world_contract::world"]
 [dev-dependencies]
 cairo_test = "=2.9.2"
 dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.1.1" }
+
+[tool.dojo.env]
+rpc_url = "https://api.cartridge.gg/x/octaflipdev1/katana"
