--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@starknet-react/core": "^3.7.2",
     "@tailwindcss/postcss": "^4.0.7",
     "@types/uuid": "^10.0.0",
+    "bignumber.js": "^9.1.2",
     "immer": "^10.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
