--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.1",
     "@cartridge/connector": "^0.7.3",
     "@cartridge/controller": "^0.7.3",
     "@cartridge/ui-next": "0.5.0-alpha.1",
