--- a/contract/Scarb.toml
+++ b/contract/Scarb.toml
@@ -24,3 +24,5 @@ dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.2.1" }
 
 [tool.dojo.env]
 rpc_url = "https://api.cartridge.gg/x/octaflipdev1/katana"
+
+[profile.sepolia]
