feat(client): tiles color, game countdown, number of tiles flipped, etc. - didn't later try optimistic update - board to show gray for tiles that has never been flipped - display correct countdown - show number of tiles flipped by each players

--- a/contract/dojo_dev.toml
+++ b/contract/dojo_dev.toml
@@ -1,17 +1,17 @@
 [world]
 name = "Octa Flip"
 description = "Octa flip game on Starknet"
-cover_uri = ""
-icon_uri = ""
+cover_uri = "https://octaflip.com"
+icon_uri = "https://octaflip.com"
 website = "https://octaflip.com"
 seed = "octa_flip_dev_1"
 
 
 [world.socials]
 x = ""
-discord = ""
-github = ""
-telegram = ""
+discord = "https://octaflip.com"
+github = "https://octaflip.com"
+telegram = "https://octaflip.com"
 
 [namespace]
 default = "octa_flip"
